k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaize-frontend-service
  namespace: frontend
spec:
  selector:
    app: gaize-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
