k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaize-frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gaize.joseatolentino.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaize-frontend-service
                port:
                  number: 80
